--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.22",
     "next": "15.5.4",
